# taiwan-traffic-camera-vehicle-counter

./: README.md  camera_region_settings.json  main.py  pyproject.toml
exports/: vehicle_counts_20260331_1400.csv  vehicle_counts_20260331_1500.csv  vehicle_counts_20260331_2200.csv  vehicle_counts_20260331_2300.csv  vehicle_counts_20260401_0000.csv
