[project]
name = "taiwan-traffic-camera-vehicle-counter"
version = "0.1.0"
description = "Taiwan traffic camera vehicle counting with Ultralytics YOLO and OpenCV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"numpy>=2.1.0",
	"opencv-python>=4.10.0",
	"ultralytics>=8.3.0",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }